feat(dev-env) fill dev-env chapter with GitPod instructions
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/content/index.adoc
+++ b/content/index.adoc
@@ -25,6 +25,9 @@ image::qrcode.png["QRCode to this presentation",height=150]
 // Welcome
 include::./chapitres/welcome.adoc[leveloffset=1]
 
+// Mise en place de l'environnement de travail
+include::./chapitres/dev-env.adoc[leveloffset=1]
+
 [{invert}]
 == Merci !
 
