--- a/content/attributes.adoc
+++ b/content/attributes.adoc
@@ -29,3 +29,4 @@
 :github_icon: pass:[<span class="fab fa-github"></span>]
 :pdf_icon: pass:[<span class="far fa-file-pdf"></span>]
 :author_mail: {mail_icon} damien.duportal <chez> gmail.com
+:gitpod_github_repo_url: https://github.com/dduportal/esgi-gitpod
