feat: add ci with Docker Images
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/content/index.adoc
+++ b/content/index.adoc
@@ -46,6 +46,9 @@ include::./chapitres/docker-base.adoc[leveloffset=1]
 // Docker - Images
 include::./chapitres/docker-images-base.adoc[leveloffset=1]
 
+// CI avec Docker Images
+include::./chapitres/ci-docker-images.adoc[leveloffset=1]
+
 == Work in progress
 
 🚧 Revenez plus tard
