feat: add moar-git
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/content/index.adoc
+++ b/content/index.adoc
@@ -53,6 +53,9 @@ include::./chapitres/ci-docker-images.adoc[leveloffset=1]
 include::./chapitres/docker-volumes.adoc[leveloffset=1]
 include::./chapitres/docker-network.adoc[leveloffset=1]
 
+// Moar Git
+include::./chapitres/moar-git.adoc[leveloffset=1]
+
 == Work in progress
 
 🚧 Revenez plus tard
