feat: add cd chapter
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/content/index.adoc
+++ b/content/index.adoc
@@ -62,6 +62,9 @@ include::./chapitres/multiplayer-git.adoc[leveloffset=1]
 // Versions
 include::./chapitres/version.adoc[leveloffset=1]
 
+// CD
+include::./chapitres/continuous-delivery.adoc[leveloffset=1]
+
 == Work in progress
 
 🚧 Revenez plus tard
