feat: add tests chapter
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/content/index.adoc
+++ b/content/index.adoc
@@ -65,6 +65,9 @@ include::./chapitres/version.adoc[leveloffset=1]
 // CD
 include::./chapitres/continuous-delivery.adoc[leveloffset=1]
 
+// Tests
+include::./chapitres/tests.adoc[leveloffset=1]
+
 == Work in progress
 
 🚧 Revenez plus tard
