fix(tooling) Update gulp and revealjs plugins workflows for asciidoctor/revealjs 5.x
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/content/attributes.adoc
+++ b/content/attributes.adoc
@@ -1,10 +1,15 @@
+:docinfo: private
+:source-highlighter: highlight.js
+:highlightjs-languages: groovy, dockerfile
+:icons: font
 :sectids:
 :allow-uri-read:
 :linkattrs:
 :idprefix:
 :imagesdir: media/
+:customcss: ./styles/build.css
+:revealjs_hash: true
 :revealjsdir: ./reveal.js
-:revealjs_customtheme: ./styles/build.css
 :revealjs_history: true
 :revealjs_margin: 0.1
 :revealjs_width: 1280
@@ -14,18 +19,13 @@
 :revealjs_slideNumber: true
 :revealjs_controls: true
 :experimental: true
-:source-highlighter: highlightjs
-:invert: state=invert,background-color="rgb(248, 228, 130)"
-:stylesdir: styles
 :notitle: true
-:revealjs_plugins: ./assets/plugins/revealjs-plugins.js
-:revealjs_plugins_configuration: ./assets/plugins/revealjs-plugins-config.js
-:mail_icon: pass:[<span class="fa fa-envelope"></span>]
-:github_icon: pass:[<span class="fab fa-github"></span>]
-:linkedin_icon: pass:[<span class="fab fa-linkedin"></span>]
-:twitter_icon: pass:[<span class="fab fa-twitter"></span>]
-:github_icon: pass:[<span class="fab fa-github"></span>]
-:pdf_icon: pass:[<span class="far fa-file-pdf"></span>]
-:author_mail: {mail_icon} damien.duportal <chez> gmail.com
+:github_icon: icon:github[set=fa]
+:linkedin_icon: icon:linkedin[set=fa]
+:twitter_icon: icon:twitter[set=fa]
+:pdf_icon: icon:pdf[set=fa]
+:author_mail: icon:envelope[set=fa] damien.duportal icon:at[set=fa] gmail.com
 :gitpod_github_repo_url: https://github.com/dduportal/esgi-gitpod
 :student_gh_repository_name: esgi-devops-2023
+:revealjs_customtheme: ./styles/build.css
+:invert: state=invert,background-color="rgb(248, 228, 130)"
