--- a/content/attributes.adoc
+++ b/content/attributes.adoc
@@ -1,5 +1,6 @@
 :docinfo: private
 :source-highlighter: highlight.js
+:highlightjsdir: highlightjs
 :highlightjs-languages: groovy, dockerfile
 :icons: font
 :iconfont-remote!:
