fix: update named references from last year course
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,6 @@
 = 🇫🇷 Cours ESGI : Orchestration de conteneurs et intégration continue
 
-Cours disponible (plusieurs années) à cette adresse : https://dduportal.github.io/esgi-containers-ci-cd[]
+Cours disponible (plusieurs années) à cette adresse : https://dduportal.github.io/esgi-courses[]
 
 🇺🇸
 
