--- a/content/attributes.adoc
+++ b/content/attributes.adoc
@@ -29,6 +29,6 @@
 :pdf_icon: icon:file-pdf[set=fa]
 :author_mail: icon:envelope[set=fa] damien.duportal icon:at[set=fa] gmail.com
 :gitpod_github_repo_url: https://github.com/dduportal/esgi-gitpod
-:student_gh_repository_name: esgi-containers-ci-cd
+:student_gh_repository_name: esgi-ci-cd
 :revealjs_customtheme: ./styles/build.css
 :invert: state=invert,background-color="rgb(248, 228, 130)"
