--- a/content/index.adoc
+++ b/content/index.adoc
@@ -47,16 +47,23 @@ include::./chapitres/moar-git.adoc[leveloffset=1]
 // Multiplayer Git
 include::./chapitres/multiplayer-git.adoc[leveloffset=1]
 
+// Docker Base
+include::./chapitres/docker-base.adoc[leveloffset=1]
 
-== WiP
+// Docker Images
+include::./chapitres/docker-images.adoc[leveloffset=1]
 
-🚧
+// CI Docker Images
+include::./chapitres/ci-docker.adoc[leveloffset=1]
 
-// // Versions
-// include::./chapitres/version.adoc[leveloffset=1]
+// GitHub Forks
+include::./chapitres/github-forks.adoc[leveloffset=1]
 
-// // CD
-// include::./chapitres/continuous-delivery.adoc[leveloffset=1]
+// Version
+include::./chapitres/version.adoc[leveloffset=1]
+
+// CD
+include::./chapitres/continuous-delivery.adoc[leveloffset=1]
 
 // Bibliographie
 include::./chapitres/bibliographie.adoc[leveloffset=1]
