--- a/content/index.adoc
+++ b/content/index.adoc
@@ -1,8 +1,8 @@
-= CI/CD: Solutions de déploiements continus
+= Orchestration de conteneurs et Intégration Continue
 include::./attributes.adoc[]
 
 [.title]
-🇫🇷 link:https://www.esgi.fr/campus-lyon.html[ESGI Lyon,window="_blank"] - M2-IW-ALT-S1 2023
+🇫🇷 link:https://www.esgi.fr/campus-lyon.html[ESGI Lyon,window="_blank"] - M1-AL-ALT-S1 2023
 
 image::qrcode.png["QRCode to this presentation",height=150]
 
