--- a/content/index.adoc
+++ b/content/index.adoc
@@ -53,6 +53,12 @@ include::./chapitres/docker-base.adoc[leveloffset=1]
 // Docker Images
 include::./chapitres/docker-images.adoc[leveloffset=1]
 
+// Docker Volumes
+include::./chapitres/docker-volumes.adoc[leveloffset=1]
+
+// Docker Network
+include::./chapitres/docker-network.adoc[leveloffset=1]
+
 // CI Docker Images
 include::./chapitres/ci-docker.adoc[leveloffset=1]
 
